--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -158,7 +158,7 @@
     <div class="nav-footer">
       <div class="d-flex term-link">
         <span>Share & Refer</span>
-        <span><a  routerLink="/terms-of-use">Terms & Conditions</a> </span>
+        <span><a routerLink="/terms-of-use" target="_blank">Terms & Conditions</a> </span>
         <!-- <span><a  routerLink="/terms-of-use#top">Terms & Conditions</a> </span> -->
 
       </div>
