[Priyanka]Added:Customer portal link, goqii,shopkeeper in sidenav

--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -51,6 +51,10 @@
 						href="https://ins.finizoninsurance.com/partner/posp-home">
 						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
 					</a> -->
+					<!-- <a style="text-decoration: none;" target="_blank"
+						href="https://ins.finizoninsurance.com/partner/signup">
+						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
+					</a> -->
 					<a style="text-decoration: none;" target="_blank"
 						href="https://ins.finizoninsurance.com/partner/signup">
 						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
@@ -244,7 +248,7 @@
 		<div class="modal-content">
 			<div class="modal-body">
 				<div class="col-lg-8 col-sm-6">
-					<a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/user/home">
+					<a style="text-decoration: none;" target="_blank" href="https://diy.ins.finizoninsurance.com/user/home/">
 						<button class="nav-link active btn btn-primary theme-button modalpartnerbtn">Insurance</button>
 					</a>
 					<a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/client-login">
