--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -15,8 +15,8 @@
               routerLink="/overview">Dashboard</a>
           </li> -->
           <li class="nav-item">
-            <!-- <a class="nav-link" href="http://65.1.237.83:6800" target="_blank">Insure</a> -->
-            <a class="nav-link" href="https://uatnw.finizoninsurance.com" target="_blank">Insure</a>
+            <a class="nav-link" href="http://65.1.237.83:6800" target="_blank">Insure</a>
+            <!-- <a class="nav-link" href="https://uatnw.finizoninsurance.com" target="_blank">Insure</a> -->
 
           </li>
           <!--ORG code-->     
@@ -112,6 +112,10 @@
             <li><a target="_blank" href="https://tools.finizon.com/insureright">Insureright</a></li>
             <li><a target="_blank" href="https://tools.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li>
             <li><a target="_blank" href="https://tools.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li>
+            <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
+
+            <!-- <li><a target="_blank" href="https://tools.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li> -->
+            <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
           </ul>
         </div>
       </div>
@@ -144,6 +148,10 @@
             <li><a target="_blank" href="https://tools.finizon.com/insureright">Insureright</a></li>
             <li><a target="_blank" href="https://tools.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li>
             <li><a target="_blank" href="https://tools.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li>
+            <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
+
+            <!-- <li><a target="_blank" href="https://tools.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li> -->
+            <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
           </ul>
         </div>
       </div>
