--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,7 +83,7 @@
                   </div>
 
                   <div class="col-lg-8 col-sm-6">
-                    <a style="text-decoration: none;" target="_blank" href="https://ins.finizoninsurance.com/user/home">
+                    <a style="text-decoration: none;" target="_blank" href="https://diy.ins.finizoninsurance.com/user/home/">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a>
                     <a style="text-decoration: none;" target="_blank" href="https://forms.gle/J1WexoLfsLAoMrAp7">
