--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -205,10 +205,16 @@
 
     <div class="container hidden-xs mt-5 mb-3 common-mt-3 more-product money-invest loan-opt">
       <div class="row align-items-center">
-        <div class="col" *ngFor="let credit of CreditdataList" (click)="CreditRouterUrl(credit)">
+        <div class="col" *ngFor="let credit of CreditdataList.slice(0,4)" (click)="CreditRouterUrl(credit)">
           <div class="money-mng">
             <img src="{{credit?.logo}}" alt="l1">
             <p [innerHTML]="credit?.name"></p>
+          </div>
+        </div>
+        <div class="col" *ngFor="let credit of CreditdataList.slice(4,5)" (click)="CreditRouterUrl(credit)">
+          <div class="money-mng">
+            <img src="{{credit?.logo}}" alt="l1" class="shopkeeper_logo">
+            <p [innerHTML]="credit?.name" class="shopkeeper_name"></p>
           </div>
         </div>
       </div>
