--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -106,7 +106,7 @@
 						class="black">Partner Registration</a></li> -->
 					<li><a target="_blank" href="https://ins.finizoninsurance.com/partner/signup" class="black">Partner
 							Registration</a></li>
-					<li><a target="_blank" href="https://ins.finizoninsurance.com" class="black">Buy Insurance</a></li>
+					<li><a target="_blank" href="https://diy.ins.finizoninsurance.com/user/home/" class="black">Buy Insurance</a></li>
 				</ul>
 			</div>
 
@@ -151,7 +151,7 @@
 							class="black">Partner Registration</a></li> -->
 					<li><a target="_blank" href="https://ins.finizoninsurance.com/partner/signup" class="black">Partner
 							Registration</a></li>
-					<li><a target="_blank" href="https://ins.finizoninsurance.com" class="black">Buy Insurance</a></li>
+					<li><a target="_blank" href="https://diy.ins.finizoninsurance.com/user/home/" class="black">Buy Insurance</a></li>
 				</ul>
 			</div>
 
