--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -115,7 +115,7 @@
             <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
 
             <!-- <li><a target="_blank" href="https://tools.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li> -->
-            <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
+            <!-- <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li> -->
           </ul>
         </div>
       </div>
@@ -149,7 +149,7 @@
             <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
 
             <!-- <li><a target="_blank" href="https://tools.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li> -->
-            <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
+            <!-- <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li> -->
           </ul>
         </div>
       </div>
