--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -146,7 +146,7 @@
 	align-items: center;
 	/* justify-content: space-between;
     align-items: flex-start; */
-	margin-top: 20px;
+	/* margin-top: 20px; */
 	/* border:2px solid black */
 }
 
@@ -178,7 +178,7 @@
 .profiling-team {
 	flex: 1;
 	margin-left: 22%;
-	margin-top: -29%;
+	margin-top: -40%;
 	/* flex:1; */
 	/* border:1px solid grey; */
 	border-radius: 15px;
@@ -198,7 +198,7 @@
 	/* width: 100%; */
 	/* height: 100%; */
 	/* max-width: 6000px; */
-	height: 400px;
+	height: 415px;
 }
 
 .profile_Photo {
@@ -207,7 +207,7 @@
 	height: 100%;
 	object-fit: cover;
 	object-position: center;
-	max-width: 320px !important;
+	max-width: 300px !important;
 	max-height: 300px !important;
 	border-radius: 10px;
 	/* border: 1px solid #00A3B1 */
@@ -247,7 +247,7 @@
 .bio {
 	color: black;
 	font-family: "Circular Std font", Sans-serif;
-	font-size: 18px;
+	font-size: 15px;
 	font-weight: 400;
 	line-height: 27px;
 	letter-spacing: 0.4px;
@@ -414,7 +414,7 @@
 		justify-content: center;
 		align-items: center;
 		flex-wrap: wrap;
-		margin-bottom: 20px;
+		margin-bottom: 25px;
 	}
 
 	.profiling-team {
