[Priyanka]Added: Profile

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -596,8 +596,9 @@
             <div
               class="elementor-element elementor-element-7df21f2 animated-slow elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list animated fadeIn">
               <div class="elementor-widget-container firstpoint">
-                <ul class="elementor-icon-list-items">
-                  <li class="elementor-icon-list-item" style="list-style: none;">
+                <ul class="elementor-icon-list-items" style="list-style: none;">
+                  <li class="elementor-icon-list-item">
+
                     <span class="elementor-icon-list-icon">
 
                       <img src="assets/img/right-arrow.png" class="right_arrow_img" alt="rightarrow">
@@ -681,14 +682,14 @@
           <!-- <div class="col-lg-12 pos-rel"> -->
           <div class="founders-container ">
             <div class="founder-column hidden-xs hidden-md ">
-              <div *ngFor="let founder of founders.slice(0, 3)">
+              <div *ngFor="let founder of founders.slice(0, 4)">
                 <!-- <img class="clkprofile_Photo" [src]="founder.img"[class.selected]="selectedFounder" (click)="showDetails(founder)" /> -->
                 <img class="clkprofile_Photo" [src]="founder.img" [class.selected]="isSelected(founder)"
                   (click)="showDetails(founder)" alt="founderimg" />
               </div>
             </div>
             <div class="founder-column hidden-xs hidden-md ">
-              <div *ngFor="let founder of founders.slice(3)">
+              <div *ngFor="let founder of founders.slice(4)">
                 <img class="clkprofile_Photo" [src]="founder.img" [class.selected]="isSelected(founder)"
                   (click)="showDetails(founder)" alt="founderimg" />
               </div>
@@ -701,7 +702,7 @@
                 </div>
               </div>
             </div>
-
+<!-- <img src="../../assets/img/abhay.jpg" alt=""> -->
           </div>
           <!-- </div> -->
           <!-- <img src="../../assets/img/founding team member/founder-asish.svg" alt=""> -->
@@ -831,8 +832,8 @@
         <div class="col-1">
         </div>
         <!-- <div class="col col-6 hidden-lg">
-			<img src="assets/img/bajaj_logo.png" class="c5">
-		    </div> -->
+      <img src="assets/img/bajaj_logo.png" class="c5">
+        </div> -->
         <div class="col">
           <img src="assets/img/1280px-Reliance_General_Insurance.svg.png" class="c2 relianceimg" alt="reliance">
         </div>
@@ -846,8 +847,8 @@
           <img src="assets/img/universal_logo.png" class="c4" alt="universal">
         </div>
         <!-- <div class="col col-6 hidden-lg">
-			<img src="assets/img/max_life.png" class="c1">
-		    </div> -->
+      <img src="assets/img/max_life.png" class="c1">
+        </div> -->
         <div class="col-1">
         </div>
       </div>
@@ -945,8 +946,10 @@
             <h3>Grow your family's investment in one place</h3>
           </div>
           <div class="col-lg-3 col-12 col-sm-3">
-            <!-- <a href="http://65.1.237.83/" class="nav-link btn btn-primary theme-button m0-auto">Get Started</a> -->
-            <a href="https://uatnw.finizon.com/" class="nav-link btn btn-primary theme-button m0-auto">Get Started</a>
+            <a href="http://65.1.237.83/" class="nav-link btn btn-primary theme-button m0-auto">Get Started</a>
+            <!-- <a href="https://uatnw.finizon.com/" class="nav-link btn btn-primary theme-button m0-auto">Get Started</a> -->
+            <!-- <a href="https://finizon.com/" class="nav-link btn btn-primary theme-button m0-auto">Get Started</a> -->
+
 
 
           </div>
